# telegram-mcp-notify

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/telegram-notify/: SKILL.md  openai.yaml
.agents/skills/telegram-notify/templates/: event-notification-prompts.md  send-message-http.md
docs/: telegram-bot-api-http-notifications.md
docs/.codex/: SKILL.md
docs/agent_change_logs/: readmeSetupInstructions_2026-03-03.md
docs/config-examples/: codex.config.toml  cursor.mcp.json
docs/examples/: curl-sendmessage-examples.md
src/telegram_mcp_notify/: __init__.py  config.py  inbox.py  listener.py  messaging.py  server.py  singleton.py
tests/: conftest.py  test_inbox.py  test_listener.py  test_server.py  test_singleton.py
