[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-mcp-notify"
version = "0.1.0"
description = "Telegram notification MCP server with reply listener for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
telegram-mcp-notify = "telegram_mcp_notify.server:main"
telegram-mcp-listener = "telegram_mcp_notify.listener:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp_notify"]
