[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-mcp-notify"
version = "0.2.0"
description = "Notify-only Telegram notification MCP server for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
telegram-mcp-notify = "telegram_mcp_notify.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp_notify"]
